smaler code base

--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "VueSimpleAuthorize",
   "version": "1.0.0",
   "description": "Simple authorization system for Vue",
-  "main": "index.js",
+  "main": "VueSimpleAuthorize.js",
   "repository": "https://github.com/oniram88/VueSimpleAuthorize",
   "author": "Marino Bonetti <marinobonetti@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "lodash": "^4.17.4"
-  }
+    "lodash.includes": "^4.3.0",
+    "lodash.keys": "^4.2.0"
+  },
+  "files": [
+    "VueSimpleAuthorize.js"
+  ]
 }
