--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue_simple_authorize",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Simple authorization system for Vue",
   "main": "VueSimpleAuthorize.js",
   "repository": "https://github.com/oniram88/VueSimpleAuthorize",
@@ -8,7 +8,8 @@
   "license": "MIT",
   "dependencies": {
     "lodash.includes": "^4.3.0",
-    "lodash.keys": "^4.2.0"
+    "lodash.keys": "^4.2.0",
+    "md5": "^2.2.1"
   },
   "files": [
     "VueSimpleAuthorize.js"
