--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue_simple_authorize",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Simple authorization system for Vue",
   "main": "VueSimpleAuthorize.js",
   "repository": "https://github.com/oniram88/VueSimpleAuthorize",
@@ -8,8 +8,12 @@
   "license": "MIT",
   "dependencies": {
     "lodash.includes": "^4.3.0",
+    "lodash.isobject": "^3.0.2",
+    "lodash.isundefined": "^3.0.1",
     "lodash.keys": "^4.2.0",
-    "md5": "^2.2.1"
+    "lodash.pick": "^4.4.0",
+    "md5": "^2.2.1",
+    "object-hash": "^1.3.0"
   },
   "files": [
     "VueSimpleAuthorize.js"
